--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button id="openModel">open model</button>
+	<div id=boxModel>
+		<div id="box">
+		<h4 id="heading">Model Header</h4>
+			<div id="flex">
+		<p>Model body content</p>
+		<div id="close">close</div>
+			</div>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
