--- a/main.html
+++ b/main.html
@@ -8,13 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button id="openModel">open model</button>
+	<button id="open Model">open model</button>
 	<div id=boxModel>
 		<div id="box">
-		<h4 id="heading">Model Header</h4>
+		<h4 id="title">Model Header</h4>
 			<div id="flex">
-		<p>Model body content</p>
-		<div id="close">close</div>
+		<p id="body">Model body content</p>
+		<div id="close button">close</div>
 			</div>
 		</div>
 	</div>
