--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button id="open Model">open model</button>
+	<button id="open Model">Open Model</button>
 	<div id=boxModel>
 		<div id="box">
 		<h4 id="title">Model Header</h4>
