--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<div id="box">
 		<h4 id="title">Model Header</h4>
 			<div id="flex">
-		<p id="body">Model body content</p>
+		<p id="body">Model Body Content</p>
 		<div id="close button">close</div>
 			</div>
 		</div>
