--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<h4 id="title">Model Header</h4>
 			<div id="flex">
 		<p id="body">Model Body Content</p>
-		<div id="close button">close</div>
+		<div id="close-button">close</div>
 			</div>
 		</div>
 	</div>
